add post route to regions
