# routes/region.js
@@ -7,6 +7,8 @@ const validation = require('../middleware/validate');
 
 router.get('/:regionName', regionsController.getRegion);
 
+router.post(':/regionName', validation.saveRegion, regionsController.createRegion);
+
 router.put('/:regionName', validation.saveRegion, regionsController.updateRegion); 
 
 router.delete('/:regionName', regionsController.deleteRegion);
